# codesplain

./: .gitignore  plan.md  pyproject.toml  tools.py
prompts/: abductive_synthesis.md  inductive_analysis.md  single_file_analysis.md  summarize_swot.md  summarize_unstructured.md  swot.md
tools/: llm.py  manual.py
